added onClick function, ability for input text to create button and attach the onClick to the newly created button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="api-buttons"></div>
+    </div>
+    <div class="wrapper">
         <div class="image"></div>
     </div>
     <form id="form">
