commit for code clean-up, still need to add ratings label to each image. and css clean-up

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="api-buttons"></div>
+    <div class="wrapper row">
+        <div class="api-buttons col-12"></div>
     </div>
-    <div class="wrapper">
-        <div class="image"></div>
+    <div class="wrapper row">
+        <div class="image col-8"></div>
     </div>
     <form id="form">
         <div class="form-group" id="submitForm">
             <label for="addChoice">Add Search Choice</label>
             <input type="text" class="form-control" placeholder="Add Search" id="addChoice">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-info ">Submit</button>
         </div>
 
     </form>
