added flex box to image and form containers to position them on the page. added ratings need to move ratings to the top of the image

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <div class="wrapper row">
         <div class="api-buttons col-12"></div>
     </div>
-    <div class="wrapper row">
-        <div class="image col-8"></div>
-    </div>
-    <form id="form">
-        <div class="form-group" id="submitForm">
-            <label for="addChoice">Add Search Choice</label>
-            <input type="text" class="form-control" placeholder="Add Search" id="addChoice">
-            <button class="btn btn-info ">Submit</button>
-        </div>
+    <div class="wrapper row div-wrapper">
+        <div class="image">
 
-    </form>
-    
+        </div>
+        <form id="form">
+            <div class="form-group" id="submitForm">
+                <label for="addChoice">Add Search Choice</label>
+                <input type="text" class="form-control" placeholder="Add Search" id="addChoice">
+                <button class="btn btn-info ">Submit</button>
+            </div>
+        </form>
+        
+    </div>
     <script src="./assets/js/api.js"></script>
 </body>
 </html>
